welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
if (isWeekend) {(if cigar>=40) {return true}
				else {return false}
else if (cigar >=40 && cigar<=60)  {return true}
				else {return false}

}}